--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.14.0</version>
 				<configuration>
 					<complianceLevel>${java.version}</complianceLevel>
 					<Xlint>ignore</Xlint>
